# staff-manager

backend/: pyproject.toml
backend/app/: main.py
